# mlops_project

./: .dockerignore  .gitignore  Dockerfile.train  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yml  lint.yml  tests.yml
artifacts/lstm-clean-v0/: lstm.pt
artifacts/preprocessing-artifacts-v3/: feature_scaler.pkl  target_scaler.pkl
config/: hyperparams.yaml
notebooks/: dl_project.ipynb
src/: data_module.py  train.py  utils.py
src/api/: inference_api.py
src/data/: preprocessing.py
src/inference/: loader.py
src/logging/: logging_config.py
src/model_arch/: BaseRNN.py
src/train/: data_module.py  train.py
tests/: test_data_module.py  test_train.py
